--- a/P1/CH1/CH1.tex
+++ b/P1/CH1/CH1.tex
@@ -33,8 +33,10 @@ méthode marche à tous les niveaux).
 \subsection{Risque d’évolution}
 Ce cours est susceptible d'évoluer rapidement du fait que Swift n'est pas encore stabilisé.
 
-Le site \url{https://github.com/ksm/SwiftInFlux/blob/master/README.md}  répertorie les
-évolutions de Swift, y compris celles qui ne sont qu’envisagées.
+Le site
+\TSwiftUrl{https://github.com/ksm/SwiftInFlux/blob/master/README.md}{SwiftInFlux}{SwiftInFlux} 
+répertorie les évolutions de Swift,
+y compris celles qui ne sont qu’envisagées.
 \section{Quelques notions sur le fonctionnement d'un ordinateur}
 \subsection{Qu'est-ce qu'un ordinateur ?}
 Qu'est-ce qu'un ordinateur ? Avant tout une machine qui manipule des données (par
@@ -99,8 +101,9 @@ L'un des langage ayant marqué l'informatique est le langage \emph{C}.
 On classe donc les langages selon leur niveau d'abstraction par rapport au
 fonctionnement de l'ordinateur. L'\emph{assembleur} est un langage de bas niveau, très (trop)
 prohe du fonctionnement du processeur, tandis que le \emph{C} est de haut niveau (permettant
-d'ordonner au processeur beaucoup de choses en une instruction), et le \emph{python},de très
-haut niveau, pour ne citer que quelques exemples d'une très longue liste.%Liste Wiki
+d'ordonner au processeur beaucoup de choses en une instruction), et le \emph{python}, de très
+haut niveau, pour ne citer que quelques exemples d'une 
+\TSwiftUrl{http://fr.wikipedia.org/wiki/Liste_des_langages_de_programmation}{très longue liste}{Liste des langages de programmation}.
 
 \emph{Swift}, le langage que nous allons étudier, est un langage de plus haut niveau
 que le C.
