Add precision about variable scoping

--- a/P1/CH5/CH5.tex
+++ b/P1/CH5/CH5.tex
@@ -190,8 +190,10 @@ if b == 0 /*Condition, non nécessairement entre parenthèse*/{
 \end{minted}
 \caption{la syntaxe de if}
 \end{listing}
-Deux commentaires pour ceux qui ont déjà programmé
-dans un langage utilisant la syntaxe du C :
+\paragraph{Attention :}
+Vous pouvez déclarer des variables entre les deux accolades, mais ces variables ne seront accessible que jusqu'à l'accolade fermante.
+\paragraph{Deux commentaires pour ceux qui ont déjà programmé
+dans un langage utilisant la syntaxe du C :}
 \begin{itemize}
 \item Les parenthèses autour de la condition ne sont pas nécessaires,
 et sont en général omise dans la doc d'Apple.
