Reorganisation of the general layout. Prepartion for splitting two chapters

--- a/P1-LesBasesImperatives/CH3-LesVariables/CH3-LesVariables.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/CH3-LesVariables.tex
@@ -1,6 +1,6 @@
 \input{../../Conf} % Configuration, includig document class.
 
-\title{\TSwiftTitle{} --- Chapitre 1}
+\title{\TSwiftTitle{} --- Chapitre 3}
 
 \newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
 
@@ -10,6 +10,6 @@
 
 \tableofcontents
 
-\input{\TSwiftRoot/P1/CH1/CH1}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH3-LesVariables/Chapter}
 
 \end{document}
