--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -19,9 +19,9 @@ on traduit improprement ce terme par octet, qui désigne un mot/byte de 8 bit qu
 Toute la mémoire est découpé en bytes. On manipule forcément un ensemble de byte. (1,
 2, 4, ...), et donc toute variable a une taille définie qui est un multiple de l'octet.
 
-L'ordinateur peut aussi stocker des nombres binaires à virgule, comme nos nombres à virgule, avec les limitations de ces derniers. Je ne détaille pas ici toute la représentation, si vous voulez des details je vous renvoie à cet excellent tutoriel :
+L'ordinateur peut aussi stocker des nombres binaires à virgule, comme nos nombres à virgule, avec les limitations de ces derniers. Je ne détaille pas ici toute la représentation, si vous voulez des details je vous renvoie à cet excellent \TSwiftUrl{http://openclassrooms.com/courses/fonctionnement-d-un-ordinateur-depuis-zero}{tutoriel}{Fonctionnement d'un ordinateur à partir de zéro --- OpenClassrooms}.
 
-\url{http://openclassrooms.com/courses/fonctionnement-d-un-ordinateur-depuis-zero}
+\url
 
 \emph{Mais il n'y a que des nombres, comment on stocke du texte ?!}
 Désolé, mais pour l'ordinateur, tout est un nombre, tout dépend de la façon dont on
