--- a/P1-LesBasesImperatives/CH6-LesBooleens/CH6-LesBooleens.tex
+++ b/P1-LesBasesImperatives/CH6-LesBooleens/CH6-LesBooleens.tex
@@ -1,6 +1,6 @@
 \input{../../Conf} % Configuration, includig document class.
 
-\title{\TSwiftTitle{} --- Chapitre 6}
+\title{\TSwiftTitle{} --- Chapitre 5}
 
 \newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
 
@@ -10,6 +10,6 @@
 
 \tableofcontents
 
-\input{\TSwiftRoot/P1/CH6/CH6}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH6-LesBooleens/Chapter}
 
 \end{document}
