--- a/P1-LesBasesImperatives/CH8-LesBoucles/CH8-LesBoucles.tex
+++ b/P1-LesBasesImperatives/CH8-LesBoucles/CH8-LesBoucles.tex
@@ -1,6 +1,6 @@
 \input{../../Conf} % Configuration, includig document class.
 
-\title{\TSwiftTitle{} --- Chapitre 5}
+\title{\TSwiftTitle{} --- Chapitre 6}
 
 \newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
 
@@ -10,6 +10,6 @@
 
 \tableofcontents
 
-\input{\TSwiftRoot/P1/CH5/CH5}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH8-LesBoucles/Chapter}
 
 \end{document}
