--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -13,7 +13,7 @@
 \tableofcontents
 
 \mainmatter
-\input{\TSwiftRoot/P1/P1}
+\input{\TSwiftRoot/P1-LesBasesImperatives/Part}
 \backmatter
 
 \appendix
