--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/CH2-DecouvronsXCode.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/CH2-DecouvronsXCode.tex
@@ -1,6 +1,6 @@
 \input{../../Conf} % Configuration, includig document class.
 
-\title{\TSwiftTitle{} --- Chapitre 4}
+\title{\TSwiftTitle{} --- Chapitre 2}
 
 \newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
 
@@ -10,6 +10,6 @@
 
 \tableofcontents
 
-\input{\TSwiftRoot/P1/CH4/CH4}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter}
 
 \end{document}
