--- a/P1-LesBasesImperatives/CH5-String/CH5-String.tex
+++ b/P1-LesBasesImperatives/CH5-String/CH5-String.tex
@@ -1,6 +1,6 @@
 \input{../../Conf} % Configuration, includig document class.
 
-\title{\TSwiftTitle{} --- Chapitre 3}
+\title{\TSwiftTitle{} --- Chapitre 4}
 
 \newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
 
@@ -10,6 +10,6 @@
 
 \tableofcontents
 
-\input{\TSwiftRoot/P1/CH3/CH3}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH5-String/Chapter}
 
 \end{document}
